src/styles/_project.scss
.project,
.project-right {
  border: 1px solid $accent-line;
  border-radius: 5px;
  padding: 2rem;
  margin-bottom: 2rem;
  width: 100%;
  position: relative;

  &__screenshots,
  &-right__screenshots {
    display: none;
  }

  &__header {
    margin-bottom: 2rem;
    &--featured {
      font-size: 1.4rem;
      color: $turqoise;
      letter-spacing: 1px;
      font-weight: 600;
    }
    &--title {
      font-size: 2rem;
      font-weight: 700;
      color: $grey-nurse;
    }
  }

  &__description {
    font-size: 1.6rem;
    color: $text;
    margin-bottom: 2rem;
    line-height: 2.4rem;
  }

  &__skills {
    margin-bottom: 2rem;

    & ul {
      display: flex;
      list-style: none;
      overflow: auto;
      flex-wrap: wrap;
      line-height: 2.4rem;

      & li {
        padding-right: 1.5rem;
        font-family: 'hack', sans-serif;
        color: $text;
        font-size: 1.4rem;
      }
    }
  }

  &__icons--icon {
    margin-right: 1.5rem;
    cursor: pointer;
    color: $text;
    &:hover {
      color: $turqoise;
    }
  }
}

#filefire::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0.1;
  background-image: url('../images/filefire-screen-opt.png');
  background-size: cover;
  z-index: -1;
  transition: opacity 0.3s;
}

#filefire:hover::before {
  border-radius: 5px;
  opacity: 1;
  z-index: 10;
  transition: opacity 0.3s;
}

#weathercat::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0.1;
  background-image: url('../images/weathercat-screen-opt.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
  z-index: -1;
}

#weathercat:hover::before {
  border-radius: 5px;
  opacity: 1;
  z-index: 10;
  transition: opacity 0.3s;
}

#coast-connect::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0.1;
  background-image: url('../images/coastconnect-screen-opt.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
  z-index: -1;
}

#coast-connect:hover::before {
  border-radius: 5px;
  opacity: 1;
  z-index: 10;
  transition: opacity 0.3s;
}

@media screen and (min-width: 1200px) {
  .project__icons--icon {
    cursor: pointer;
  }

  .project {
    border: none;
    padding: 0;
    margin-bottom: 15rem;
    display: flex;

    align-items: center;

    &__header {
      margin-bottom: 2rem;
      &--featured {
        font-size: 1.4rem;
        font-family: 'hack', sans-serif;
        font-weight: 600;
      }
      &--title {
        font-size: 2.4rem;
      }
    }

    &__description {
      font-size: 1.6rem;
      width: 65rem;
      background-color: $card;
      padding: 2rem;
      border-radius: 5px;
      box-shadow: -2px 2px 10px 2px rgba(0, 0, 0, 0.25);
      color: #fff;
    }

    &__skills {
      margin-bottom: 2rem;

      & ul {
        & li {
          font-size: 1.4rem;
        }
      }
    }

    &__icons--icon {
    }

    &__screenshots {
      display: flex;
      margin-left: -20rem;

      align-items: center;
      z-index: -10;
      height: 30rem;

      &--desktop {
        width: 50rem;
      }

      &--mobile {
        width: 15rem;
        height: fit-content;
      }
    }
  }

  #filefire::before {
    display: none;
  }

  #weathercat::before {
    display: none;
  }

  #coast-connect::before {
    display: none;
  }

  /********* Right Aligned **********/
  .project-right {
    border: none;
    padding: 0;
    margin-bottom: 10rem;
    display: flex;
    flex-direction: row-reverse;
    align-items: center;

    &__screenshots {
      display: flex;
      flex-direction: row-reverse;
      margin-right: -20rem;

      align-items: center;
      z-index: -10;
      height: 30rem;

      &--desktop {
        width: 50rem;
      }

      &--mobile {
        width: 15rem;
        height: fit-content;
      }
    }

    &__header {
      margin-bottom: 2rem;
      &--featured {
        font-size: 1.6rem;
        color: $turqoise;
      }
      &--title {
        font-size: 2.4rem;
        color: $grey-nurse;
        text-align: right;
      }
    }

    &__description {
      font-size: 1.6rem;
      width: 65rem;
      background-color: $turqoise;
      padding: 2rem;
      border-radius: 5px;
      box-shadow: -2px 2px 10px 2px rgba(0, 0, 0, 0.25);
      color: #fff;
      margin-bottom: 2rem;
      line-height: 2.4rem;
    }

    &__skills {
      margin-bottom: 2rem;

      & ul {
        display: flex;
        list-style: none;
        overflow: auto;
        flex-wrap: wrap;
        line-height: 2.4rem;
        justify-content: flex-end;

        & li {
          padding-left: 1.5rem;
          font-family: 'hack', sans-serif;
          color: $text;
          font-size: 1.4rem;
          text-align: right;
        }
      }
    }

    &__icons {
      width: 100%;
      display: flex;
      justify-content: flex-end;
      &--icon {
        color: $text;
        margin-left: 1.5rem;
        margin-right: 0;
      }
    }

    &__screenshots {
      display: flex;
      margin-left: -20rem;
      margin-top: -2rem;
      align-items: center;
      z-index: -10;
      height: 30rem;

      &--desktop {
        width: 50rem;
      }

      &--mobile {
        width: 15rem;
        height: fit-content;
      }
    }
  }

  #weathercat > .project-right__screenshots {
    margin-right: 0 !important;
  }
}

